# onft

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
examples/: basic.rs  gamechain.rs
src/: block.rs  chain.rs  error.rs  hash.rs  lib.rs
