[package]
name = "nftz"
version = "0.1.0"
description = "Bespoke protocol and high-level implementation of Non-fungible token (NFT) technology 🚀"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
