[package]
name = "onft"
version = "0.1.0-beta.2"
description = "Bespoke toolkit for Non-fungible token (NFT) technology 🚀"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
